# authenticated-data-structures-1

./: README.md  authentikit.opam  authentikit.opam.locked  dune-project
src/: Kit.re  Prover.re  Prover.rei  Verifier.re  Verifier.rei
test/: merkle.re
